--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "@types/node": "^16.11.56",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-helmet": "^6.1.5",
     "@types/react-responsive": "^8.0.5",
+    "antd": "^4.22.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-responsive": "^9.0.0-beta.10",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
+    "swr": "^1.3.0",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4"
   },
@@ -47,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
     "eslint": "^7.32.0",
