--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-helmet": "^6.1.5",
     "@types/react-responsive": "^8.0.5",
     "antd": "^4.22.8",
+    "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
