--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-helmet": "^6.1.5",
     "@types/react-responsive": "^8.0.5",
     "antd": "^4.22.8",
+    "axios": "^0.27.2",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
