--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.5.5",
     "react-redux": "^8.0.2",
     "react-responsive": "^9.0.0-beta.10",
     "react-scripts": "5.0.1",
@@ -54,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-lazy-load-image-component": "^1.5.2",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
