--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^4.22.8",
     "axios": "^0.27.2",
     "hamburger-react": "^2.5.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lazy-load-image-component": "^1.5.5",
