--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "axios": "^0.27.2",
     "hamburger-react": "^2.5.0",
     "moment": "^2.29.4",
+    "path-to-regexp": "^6.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lazy-load-image-component": "^1.5.5",
     "react-redux": "^8.0.2",
     "react-responsive": "^9.0.0-beta.10",
+    "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "swr": "^1.3.0",
