--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material/react-linear-progress": "^0.15.0",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
@@ -15,6 +16,7 @@
     "antd": "^4.22.8",
     "axios": "^0.27.2",
     "hamburger-react": "^2.5.0",
+    "install": "^0.13.0",
     "moment": "^2.29.4",
     "path-to-regexp": "^6.2.1",
     "react": "^18.2.0",
