--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "antd": "^4.22.8",
     "axios": "^0.27.2",
     "hamburger-react": "^2.5.0",
+    "i18next": "^21.9.2",
+    "i18next-browser-languagedetector": "^6.1.5",
+    "i18next-http-backend": "^1.4.4",
     "install": "^0.13.0",
     "moment": "^2.29.4",
     "path-to-regexp": "^6.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^11.18.6",
     "react-lazy-load-image-component": "^1.5.5",
     "react-lite-youtube-embed": "^2.3.1",
     "react-redux": "^8.0.2",
