--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.4",
     "styled-components": "^5.3.5",
     "swr": "^1.3.0",
     "typescript": "^4.8.2",
