--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "react-i18next": "^11.18.6",
     "react-lazy-load-image-component": "^1.5.5",
     "react-lite-youtube-embed": "^2.3.1",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.2",
     "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
-    "react-spinners": "^0.13.4",
     "styled-components": "^5.3.5",
     "swr": "^1.3.0",
     "typescript": "^4.8.2",
