--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ifilm-app",
-  "homepage": "http://haykaslanyan13.github.io/ifilm__REACT",
+  "homepage": "http://haykaslanyan13.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
