--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 REACT_APP_BASE_URL=https://api.themoviedb.org/3
 REACT_APP_API_KEY=c90960472340983f37679878e271035a
+REACT_APP_IMAGE_BASE_URL=https://image.tmdb.org/t/p/w300_and_h450_bestv2
